fixed uneccessary scroll on mobile

--- a/src/pages/Homepage/homepage.module.scss
+++ b/src/pages/Homepage/homepage.module.scss
@@ -2,7 +2,7 @@
 
 .homepage {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     @include displayFlex(column, center, flex-start, 32px);
     overscroll-behavior: none;
 }
